# Lead

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MANUAL_ACTIONS.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: chat.py  conversations.py  health.py
backend/app/database/: __init__.py  session.py
backend/app/models/: __init__.py  contact.py  conversation.py  handoff_event.py  lead_evaluation.py  message.py  platform_account.py
backend/app/repositories/: __init__.py  contact.py  conversation.py  handoff_event.py  lead_evaluation.py  message.py
backend/app/schemas/: __init__.py  chat.py  conversation.py  handoff.py  lead.py
backend/app/services/: __init__.py  chat_service.py  classifier.py  reply_generator.py
backend/tests/: conftest.py  test_chat_api.py  test_classifier.py  test_health.py
docs/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  REQUIREMENTS.md
